--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
     <div class="header">
         <nav class="navbar">
             <ul class="navbar_list">
-                <li class="navbar_items" ><a class="navbar_items" href="#">home</a></li>
-                <li class="navbar_items" > <a class="navbar_items" href="#">about</a></li>
+                <li class="navbar_items" ><a class="navbar_items " href="./login.html">login</a></li>
+                <li class="navbar_items" > <a class="navbar_items" href="#">home</a></li>
+                <li class="navbar_items" ><a class="navbar_items" href="#">about</a></li>
                 <li class="navbar_items" ><a class="navbar_items" href="#">cart</a></li>
-                <li class="navbar_items" ><a class="navbar_items" href="#">Contact us</a></li>
 
             </ul>
             <div class="logo">
@@ -44,7 +44,17 @@
     </div>
     <div class="second_content">
 
+    <p class="sec_text">
+        Shop the Best Deals Online – Quality Products, Unbeatable Prices!
+    </p>
+
+
     </div>
+    <footer>
+        <p class="foot">
+            @copyright
+        </p>
+    </footer>
 
 
 
