--- a/laptop.html
+++ b/laptop.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="stylesheet.css" >
     
 </head>
-<body>
+<body class="body_styling">
     <div class="header">
         <nav class="navbar">
             <ul class="navbar_list">
@@ -15,6 +15,7 @@
                 <li class="navbar_items" > <a class="navbar_items" href="./home.html">home</a></li>
                 <li class="navbar_items" ><a class="navbar_items" href="#">about</a></li>
                 <li class="navbar_items" ><a class="navbar_items" href="#">cart</a></li>
+                <li class="navbar_items" ><a class="navbar_items" href="./add_product.html">add+</a></li>
 
             </ul>
             <div class="logo">
@@ -26,38 +27,40 @@
             </div>
         </nav>
     </div>
-    <div class="content_container body_styling">
-        <div class="content_text">
-            <p>Choose the product</p>
+
+    <div class="gadget_container">
+        <div class="gadget_card gadget_card_details laptop_img ">
+            <p>Asus</p>
+            <p>85,000/-</p>
         </div>
-        <div class="product">
-           <a href="./mobile.html" class="product_card mobile"><div >
-                <p>Mobile</p>
-            </div></a>
-            <a href="./laptop.html" class="product_card laptop"><div >
-                <p>Laptop</p>
-            </div></a>
-            <a href="./pc.html" class="product_card pc"><div>
-                <p>Desktop</p>
-            </div></a>
-        </div>        
+        <div class="gadget_card ">
+
+        </div>
+        <div class="gadget_card">
+
+        </div>
+        <div class="gadget_card">
+
+        </div>
+        <div class="gadget_card">
+
+        </div>
+        <div class="gadget_card">
+
+        </div>
+        <div class="gadget_card">
+
+        </div>
+        <div class="gadget_card">
+
+        </div>
+        <div class="gadget_card">
+
+        </div>
+        <div class="gadget_card">
+
+        </div>
     </div>
-    <div class="second_content">
-
-    <p class="sec_text">
-        Shop the Best Deals Online – Quality Products, Unbeatable Prices!
-    </p>
-
-
-    </div>
-    <footer>
-        <p class="foot">
-            @copyright
-        </p>
-    </footer>
-
-
-
 
 <script src="./scripts.js"></script>
 </body>
