--- a/login.html
+++ b/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="stylesheet" type="" href="./login.css" />
+    <link rel="stylesheet" type="" href="./stylesheet.css" />
 </head>
-<body>
+<body class="login_container_fixed">
 
     <div class="login_body">
         <h1>E ~ Stores</h1>
@@ -14,14 +14,14 @@
     <div class="login_container">
         <form class="login_form">
             <label>Email</label>
-            <input class="form_input" name="email" type="email" required>
+            <input class="login_form_input" name="email" type="email" required>
             <label>Password</label>
-            <input class="form_input" name="password" type="password" required>
-            <input type="button" id="loginButton" value="Login"/>
+            <input class="login_form_input" name="password" type="password" required>
+            <input onclick="buttonClicked()" type="button" id="loginButton" class="button" value="Login"/>
         </form>
     </div>
     
 
-<script src="./login.js"></script>
+<script src="./scripts.js"></script>
 </body>
 </html>
